test/files/neg/t8035-removed.check
t8035-removed.scala:4: error: adaptation of an empty argument list by inserting () is deprecated: this is unlikely to be what you want
        signature: SetOps.apply(elem: A): Boolean
  given arguments: <none>
 after adaptation: SetOps((): Unit)
Scala 3 migration messages are issued as errors under -Xsource:3. Use -Wconf or @nowarn to demote them to warnings or suppress.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=scala.collection.SetOps.apply
  List(1,2,3).toSet()
                   ^
t8035-removed.scala:4: warning: a type was inferred to be `AnyVal`; this may indicate a programming error.
  List(1,2,3).toSet()
              ^
t8035-removed.scala:7: error: adaptation of an empty argument list by inserting () is deprecated: this is unlikely to be what you want
        signature: A(x: T): Foo.A[T]
  given arguments: <none>
 after adaptation: new A((): Unit)
Scala 3 migration messages are issued as errors under -Xsource:3. Use -Wconf or @nowarn to demote them to warnings or suppress.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=Foo.A.<init>
  new A
  ^
t8035-removed.scala:11: error: adaptation of an empty argument list by inserting () is deprecated: leaky (Object-receiving) target makes this especially dangerous
        signature: Format.format(x$1: Object): String
  given arguments: <none>
 after adaptation: Format.format((): Unit)
Scala 3 migration messages are issued as errors under -Xsource:3. Use -Wconf or @nowarn to demote them to warnings or suppress.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=java.text.Format.format
  sdf.format()
            ^
t8035-removed.scala:14: warning: adapted the argument list to the expected 2-tuple: add additional parens instead
        signature: List.::[B >: A](elem: B): List[B]
  given arguments: 42, 27
 after adaptation: List.::((42, 27): (Int, Int)) [quickfixable]
  Nil.::(42, 27)      // yeswarn
        ^
2 warnings
3 errors
